--- a/api.tmpl
+++ b/api.tmpl
@@ -5,21 +5,9 @@ server {
 
 	client_max_body_size 150m;
 
+	include upload.conf;
+
 	index index.php;
 
 	try_files $uri /index.php?$query_string /index.php;
-
-	location ~ \.php$ {
-		fastcgi_pass   api:9000;
-		fastcgi_index  index.php;
-		include        fastcgi_params;
-		fastcgi_param  SCRIPT_FILENAME  /app/public/index.php;
-	}
-
-	location = /upload {
-		fastcgi_pass   api:9000;
-		fastcgi_index  index.php;
-		include        fastcgi_params;
-		fastcgi_param  SCRIPT_FILENAME  /app/public/upload.php;
-	}
 }
