--- a/api.tmpl
+++ b/api.tmpl
@@ -10,4 +10,12 @@ server {
 	index index.php;
 
 	try_files $uri /index.php?$query_string /index.php;
+
+	location ~ ^(.+?\.php)(/.*)?$ {
+		fastcgi_param  PATH_INFO $2;
+		fastcgi_pass   api:9000;
+		fastcgi_index  index.php;
+		fastcgi_param  SCRIPT_FILENAME /app/src/public/index.php;
+		include        fastcgi_params;
+	}
 }
