--- a/api.tmpl
+++ b/api.tmpl
@@ -11,6 +11,11 @@ server {
 
 	try_files $uri /index.php?$query_string /index.php;
 
+	set_real_ip_from  10.0.0.0/8;
+	set_real_ip_from  172.16.0.0/12;
+	set_real_ip_from  192.168.0.0/16;
+	real_ip_header    X-Forwarded-For;
+
 	location ~ ^(.+?\.php)(/.*)?$ {
 		fastcgi_param  PATH_INFO $2;
 		fastcgi_pass   api:9000;
